# chatgpt-web-api

./: README.md
extension/: manifest_base.json  manifest_chrome.json  manifest_firefox.json  package-lock.json  package.json  tsconfig.json  webpack.config.cjs
extension/src/: background.ts  content.ts  popup.ts
extension/static/: popup.css  popup.html
server/: Cargo.toml
server/src/: main.rs  manager.rs  session.rs
