[package]
name = "webserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.3"
actix-rt = "2.9.0"
actix-web = "4.5.1"
actix-web-actors = "4.3.0"
env_logger = "0.11.3"
futures = "0.3.30"
futures-util = "0.3.30"
log = "0.4.21"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["sync", "time"] }
